--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movies</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-
+    <main class="container">
+        <header class="header">header</header>
+        <nav class="nav">nav</nav>
+        <div class="section1">section1</div>
+        <div class="section2">section2</div>
+        <div class="section3">section3</div>
+        <footer class="footer">footer</footer>
+    </main>
 </body>
 
 </html>
