Header is ready keloke

--- a/index.html
+++ b/index.html
@@ -12,7 +12,19 @@
 
 <body>
     <main class="container">
-        <header class="header">header</header>
+        <header class="header">
+            <figure class="header-icon">
+                <img src="./img/movieicon.png" alt="">
+            </figure>
+            <div class="header-search">
+                <input type="text" placeholder="Busca tu anime favorito">
+                <span></span>
+            </div>
+            <div class="header-profile">
+                <span class="profile-name">Diego Martinez</span>
+                <img src="./img/mortyprofile.jpg" alt="">
+            </div>
+        </header>
         <nav class="nav">nav</nav>
         <div class="section1">section1</div>
         <div class="section2">section2</div>
