add icons navbar, nav of the page is ready

--- a/index.html
+++ b/index.html
@@ -25,7 +25,32 @@
                 <img src="./img/mortyprofile.jpg" alt="">
             </div>
         </header>
-        <nav class="nav">nav</nav>
+        <nav class="nav">
+            <ul class="nav-menu">
+                <li>
+                    <img src="./icons/homewhite.png" alt="">
+                    <p>Home</p>
+                </li>
+                <li>
+                    <img src="./icons/rayowhite.png" alt="">
+                    <p>Tendencia</p>
+                </li>
+                <li>
+                    <img src="./icons/heartwhite.png" alt="">
+                    <p>Me gusta</p>
+                </li>
+                <li>
+                    <img src="./icons/commentwhite.png" alt="">
+                    <p>Comentarios</p>
+                </li>
+            </ul>
+            <ul class="nav-settings">
+                <li>
+                    <img src="./icons/settingswhite.png" alt="">
+                    <p>Configuracion</p>
+                </li>
+            </ul>
+        </nav>
         <div class="section1">section1</div>
         <div class="section2">section2</div>
         <div class="section3">section3</div>
