--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
                 </li>
             </ul>
         </nav>
-        <div class="section1">section1</div>
-        <div class="section2">section2</div>
-        <div class="section3">section3</div>
+        <div class="section-movies">section animes</div>
         <footer class="footer">footer</footer>
     </main>
 </body>
